update/moved company package to property update/added functionality behind Settings button in mg-cfg + modal update/removed redundant line in DoubleValueValidator update/added modal css class for double row divs update/added NumberValue validation as more custom numeric form validator rename/CompanySettings to Settings fix/compilation error on because of 'final' value in GlobalExceptionHandler

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -432,6 +432,11 @@ input {
     display: grid;
 }
 
+.modal-row-only {
+    grid-template-rows: auto auto;
+    display: grid;
+}
+
 .form-group {
     display: flex;
     flex-direction: column;
